levanta el login y se conecta a la BD